policy-tests/501-deployment-sender-outside-namespace.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ubi8-nc-sender
  namespace: namespace-b
  labels:
    app: ubi8-nc-sender-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubi8-nc-sender-b
  template:
    metadata:
      labels:
        app: ubi8-nc-sender-b
        deploymentconfig: ubi8-nc-sender-b
    spec:
      containers:
        - name: ubi8-nc
          image: >-
            image-registry.openshift-image-registry.svc:5000/quick-network-policy-images/ubi8-nc:latest
          resources: {}
          command: ["/bin/bash"]
          args:
            [
              "-c",
              'while :;do echo "$(date +%s) - Saying Hi from $POD_NAME in $POD_NAMESPACE"| timeout 5 nc ubi8-nc-reciever.$RECIEVER_NAMESPACE.svc.cluster.local 8080 && sleep 1;done',
            ]
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
