policy-tests/policy-same-namespace-only.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: namespace-a
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
